// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<StoreAddressMailingAddress /> should not render if no address is passed in 1`] = `""`;

exports[`<StoreAddressMailingAddress /> should render as expected 1`] = `
<div
  className={
    Object {
      "data-css-1npkmgj": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1rqdg8e": "",
      }
    }
  >
    <Location />
  </div>
  <div>
    <div
      data-test-id="street"
    >
      Test Street 123
    </div>
    locations.address
  </div>
</div>
`;

exports[`<StoreAddressMailingAddress /> should render more streets if necessary 1`] = `
<div
  className={
    Object {
      "data-css-1npkmgj": "",
    }
  }
>
  <div
    className={
      Object {
        "data-css-1rqdg8e": "",
      }
    }
  >
    <Location />
  </div>
  <div>
    <div
      data-test-id="street"
    >
      Test Street 123
    </div>
    <div
      data-test-id="street2"
    >
      Some additional street info
    </div>
    locations.address
  </div>
</div>
`;
